test/files/neg/macro-invalidsig-ctx-badtype/Impls_1.scala
import scala.reflect.api.{Mirror => Ctx}

object Impls {
  def foo(c: Ctx) = ???
}
